--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: tanishahampden
-github_username:  tanham21  
+github_username:  tanham  
 linkedin_username:  tanishahampden
 instagram_username: tanishahampden
 
